[project]
name = "retail-intelligence-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "klib>=1.3.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-profiling>=3.0.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.2",
]
